# edecan-oss

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  Abrir Edecán.command  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_question.yml
.github/workflows/: ci.yml  release-android.yml  release-desktop.yml  release-ios.yml
apps/api/: README.md  pyproject.toml
apps/api/edecan_api/: __init__.py  companion_manager.py  config.py  deps.py  ide_security.py  main.py  oauth_app_credentials.py  persona_tools.py  repo.py  secret_intents.py  security.py
apps/api/edecan_api/routers/: __init__.py  admin.py  ads.py  analista.py  auth.py  automations.py  billing.py  commerce.py  companion.py  connectors.py  consents.py  contacts.py  content_studio.py  conversations.py  credentials.py  devices.py  erp.py  files.py  finance.py  hooks.py  ide.py  mcp.py  me.py  memory.py  mensajes.py  missions.py  negocios.py  perfil.py  persona.py  phone.py  reminders.py  remote.py  reuniones.py  rrhh.py  setup.py  skills.py  smarthome.py  usage.py  vehiculos.py  viajes.py  (+2 more)
apps/api/tests/: _stub_siblings.py  api_fakes.py  conftest.py  test_admin.py  test_ads_router.py  test_analista_router.py  test_auth.py  test_automations_router.py  test_billing.py  test_commerce_router.py  test_companion.py  test_connectors.py  test_connectors_credentials_v2.py  test_connectors_whatsapp.py  test_consents.py  test_contacts.py  test_contacts_import.py  test_content_studio.py  test_conversations.py  test_conversations_mcp.py  test_credentials_byo.py  test_credentials_router.py  test_dependency_transaction_scope.py  test_device_pairing.py  test_devices_push.py  test_devices_router.py  test_erp_router.py  test_files.py  test_finance.py  test_healthz.py  test_hooks_router.py  test_ide_router.py  test_ide_security.py  test_llm_router_deps.py  test_local_tunnel_guard.py  test_mcp_router.py  test_me.py  test_memory.py  test_mensajes_router.py  test_missions_router.py  (+37 more)
apps/companion/: README.md  pyproject.toml
apps/companion/edecan_companion/: __init__.py  __main__.py  actions.py  approval.py  audit.py  config.py  ide_files.py  ide_git.py  ide_runtime.py  ide_sessions.py  ide_workspaces.py  main.py
apps/companion/tests/: conftest.py  test_actions_commands.py  test_actions_dispatch.py  test_actions_ide.py  test_actions_input.py  test_actions_sandbox.py  test_actions_transfer.py  test_approval.py  test_audit.py  test_config.py  test_ide_runtime.py  test_main.py
apps/desktop/: .gitignore  README.md  updater.pub
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/splash/: index.html
apps/desktop/src-tauri/src/: backend.rs  commands.rs  lib.rs  lifecycle.rs  listen.rs  main.rs  permissions.rs  remote_bridge.rs  startup.rs  tray.rs  updates.rs  util.rs
apps/local/: README.md  pyproject.toml
apps/local/edecan_local/: __init__.py  __main__.py  companion_bridge.py  migrate.py  objectstore.py  ollama_supervisor.py  pg.py  runtime.py  worker_loop.py
apps/local/tests/: conftest.py  test_companion_bridge.py  test_migrate.py  test_objectstore.py  test_ollama_supervisor.py  test_package_version.py  test_pg.py  test_runtime.py  test_worker_loop.py
apps/web/: .dockerignore  FYDESIGN_UI_PORT_MANIFEST.json  README.md  activity-overview.test.mjs  artifact-preview.test.mjs  auth-bearer.test.mjs  auth-route-policy.test.mjs  chat-attachments.test.mjs  chat-blocks.test.mjs  chat-layout.test.mjs  (+31 more)
apps/worker/: README.md  pyproject.toml
apps/worker/edecan_worker/: __init__.py  config.py  deps.py  main.py  push.py  repo.py  scheduler.py  universal_notifications.py
apps/worker/edecan_worker/handlers/: __init__.py  automation_scan.py  generate_content.py  generate_podcast.py  ingest_file.py  memory_consolidate.py  notify_important_event.py  notify_incoming_phone_call.py  notify_phone_call_summary.py  process_meeting.py  run_automation.py  run_campaign_step.py  run_mission.py  send_reminder.py  send_reminder_scan.py  sync_connector.py
apps/worker/tests/: fakes.py  test_automation_handlers.py  test_generate_content.py  test_generate_podcast.py  test_handlers_dispatch.py  test_ingest_file.py  test_ingest_file_vision.py  test_llm_por_tenant.py  test_main_backoff.py  test_mcp_en_worker.py  test_memory_consolidate.py  test_notify_important_event.py  test_notify_incoming_phone_call.py  test_notify_phone_call_summary.py  test_process_meeting.py  test_profile_consolidation.py  test_push.py  test_run_campaign_step.py  test_run_mission_handler.py  test_scheduler.py  test_send_reminder.py  test_send_reminder_scan.py  test_sync_connector.py  test_universal_notifications.py  test_v2_handlers_registry.py  test_v6_evidencia.py  test_v6_handlers_registry.py  test_v7_evidencia.py
docs/: README.md  actualizaciones.md  ads.md  agentes-llamadas.md  agentes.md  analista.md  api.md  arquitectura-cognitiva.md  asesores.md  auditorias-seguridad.md  automatizaciones.md  autorreparacion-local.md  casa-inteligente.md  claude-for-oss.md  conectores.md  configuracion-minima.md  configuracion.md  control-remoto.md  creador-universal.md  creatividad.md  credenciales.md  design-studio.md  desktop-local.md  desktop.md  dinero-real.md  estilos-de-acompanamiento.md  finanzas-stripe.md  ide.md  index.md  mcp.md  mensajeria.md  movil-android.md  movil-ios.md  navegador.md  negocios.md  notificaciones-push.md  perfil-vivo.md  personalizacion-nivel-dios.md  primeros-pasos.md  producto-assistant-first.md  (+10 more)
prompts/: README.md  consolidacion_memoria_v1.md  juez_v1.md  persona_v1.md  persona_v2.md
scripts/: check_markdown_links.py  desplegar-mi-aws.sh  instalar-selfhost.sh  pruebas_instalador.sh  smoke_selfhost.sh
(+464 files in other folders)
