[project]
name = "edecan-workspace"
version = "0.5.0"
description = "Edecan local-first AI operator monorepo"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

# The repository root coordinates the uv workspace and shared tooling. It is
# not a distributable package; every member owns its package metadata.

[tool.uv.workspace]
members = [
    "packages/schemas",
    "packages/db",
    "packages/llm",
    "packages/core",
    "packages/toolkit",
    "packages/connectors",
    "packages/voice",
    "packages/evals",
    "packages/docanalysis",
    "packages/browser",
    "packages/creative",
    "packages/messaging",
    "packages/agents",
    "packages/automations",
    "packages/commerce",
    "packages/advisory",
    "packages/business",
    "apps/api",
    "apps/worker",
    "apps/companion",
    "packages/skills",
    "packages/smarthome",
    "apps/local",
    "packages/ads",
    "packages/vehicles",
    "packages/travel",
    "packages/meetings",
    "packages/mcp",
]
# apps/web is an independent Next.js project and intentionally remains outside
# the Python workspace. Keep this member list explicit: uv only installs the
# packages declared here, including when tests are run from the repository root.

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "httpx2>=2.7,<3",
]
release = [
    # Herramienta de empaquetado del sidecar desktop. Fijada y resuelta en
    # uv.lock para que un tag produzca el mismo cierre de dependencias.
    "pyinstaller==6.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
markers = [
    "integration: integration tests that still run offline against local fakes or databases",
]
# importlib prevents basename collisions between package-local test modules.
addopts = "--import-mode=importlib"
# These two suites intentionally import local shared fakes as top-level modules.
pythonpath = ["apps/api/tests", "apps/worker/tests"]
