[project]
name = "edecan-api"
version = "0.6.0"
description = "Edecán — API HTTP (FastAPI): auth, persona, chat SSE, conectores OAuth, voz, companion WS, billing"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "aioboto3>=13.0",
    "pyotp>=2.9",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "edecan-schemas",
    "edecan-db",
    "edecan-core",
    "edecan-llm",
    "edecan-connectors",
    "edecan-voice",
    "edecan-toolkit",
    # Domain packages are direct dependencies because production images use
    # `uv sync --package edecan-api`; entry points are only discoverable when
    # their distributions are installed in that isolated environment.
    "edecan-business",
    "edecan-skills",
    "edecan-smarthome",
    "edecan-docanalysis",
    "edecan-browser",
    "edecan-creative",
    "edecan-messaging",
    "edecan-agents",
    "edecan-automations",
    "edecan-commerce",
    "edecan-advisory",
    "edecan-ads",
    # Vehicle tools remain outside the API/worker product surface; see the
    # current scope in docs/roadmap.md before adding edecan-vehicles here.
    "edecan-travel",
    "edecan-meetings",
    "edecan-mcp",
    # vCard parsing for CardDAV contact imports.
    "vobject>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.uv.sources]
edecan-schemas = { workspace = true }
edecan-db = { workspace = true }
edecan-core = { workspace = true }
edecan-llm = { workspace = true }
edecan-connectors = { workspace = true }
edecan-voice = { workspace = true }
edecan-toolkit = { workspace = true }
edecan-business = { workspace = true }
edecan-skills = { workspace = true }
edecan-smarthome = { workspace = true }
edecan-docanalysis = { workspace = true }
edecan-browser = { workspace = true }
edecan-creative = { workspace = true }
edecan-messaging = { workspace = true }
edecan-agents = { workspace = true }
edecan-automations = { workspace = true }
edecan-commerce = { workspace = true }
edecan-advisory = { workspace = true }
edecan-ads = { workspace = true }
edecan-travel = { workspace = true }
edecan-meetings = { workspace = true }
edecan-mcp = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edecan_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Mismas reglas que el pyproject.toml raíz (ARCHITECTURE.md §10.1: ruff,
# línea máxima 100). Se repiten aquí (en vez de heredarlas implícitamente)
# porque ruff resuelve la config por el pyproject.toml más cercano a cada
# archivo, y este paquete quiere además una excepción puntual: `B008`
# ("function-call-in-default-argument") es un falso positivo conocido sobre
# el propio patrón de inyección de dependencias de FastAPI (`= Depends(...)`
# como valor por defecto), recomendado por la documentación oficial de
# FastAPI y de Ruff.
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"edecan_api/**/*.py" = ["B008"]
