[project]
name = "edecan-local"
version = "0.1.0"
description = "Edecán — runner local: empaqueta api+worker+db para correr en la máquina del cliente (backend de la app de escritorio Tauri). Ver ARCHITECTURE.md §12 y DIRECCION_ACTUAL.md (WP-V3-05)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "edecan-api",
    "edecan-worker",
    "edecan-db",
    "edecan-core",
    "edecan-schemas",
    "uvicorn>=0.30",
    "fakeredis>=2.23",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "httpx>=0.27",
]

# Postgres embebido (opcional): evita exigirle a todo el mundo instalar/traer
# un binario de Postgres solo por declarar esta dependencia en el árbol
# principal -- WP-V3-05 decide si lo usa (ARCHITECTURE.md §12, "backend debe
# poder empaquetarse y correr local").
[project.optional-dependencies]
embedded = ["pgserver>=0.1.4"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
edecan-api = { workspace = true }
edecan-worker = { workspace = true }
edecan-db = { workspace = true }
edecan-core = { workspace = true }
edecan-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edecan_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
