[project]
name = "edecan-local"
version = "0.1.0"
description = "Local Edecan runtime bundling the API, worker, and data services for desktop use"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "edecan-api",
    "edecan-worker",
    "edecan-db",
    "edecan-core",
    "edecan-schemas",
    "uvicorn>=0.30",
    "fakeredis>=2.23",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "httpx>=0.27",
]

# Embedded Postgres is optional so normal installs do not need its binary.
[project.optional-dependencies]
embedded = ["pgserver>=0.1.4"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
edecan-api = { workspace = true }
edecan-worker = { workspace = true }
edecan-db = { workspace = true }
edecan-core = { workspace = true }
edecan-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edecan_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
